--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -15,11 +15,11 @@
             <label class="form-label" for="location">Location</label>
             <input class="form-control" type="text" id="location" name="campground[location]" required>
         </div>
-        <input type="file" name="image" id="">
-        <!-- <div class="mb-3">
+        <!-- <input type="file" name="image" id=""> -->
+        <div class="mb-3">
             <label class="form-label" for="image">Image Url</label>
             <input class="form-control" type="text" id="image" name="campground[image]" required>
-        </div> -->
+        </div>
         <div class="mb-3">
             <label class="form-label" for="price">CampgroundPrice</label>
             <div class="input-group">
