--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -11,7 +11,7 @@
         </div>
         <ul class="list-group list-group-flush">
           <li class="list-group-item text-muted"><%= camp.location%></li>
-          <li class="list-group-item">Submitted By: <%= camp.author %></li>
+          <li class="list-group-item">Submitted By: <%= camp.author.username %></li>
           <li class="list-group-item">$<%= camp.price%>/night</li>
         </ul>
         <% if(currentUser && camp.author.equals(currentUser._id)) {%>
