--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,7 +2,7 @@
 <div class="row">
     <h1 class="text-center">New Campground</h1>
     <div class="col-md-6 offset-md-3">
-    <form action="/campgrounds" method="post" novalidate class="validated-form" enctype="multipart/form-data">
+    <form action="/campgrounds" method="post" novalidate class="validated-form">
         <div class="mb-3">
             <label class="form-label" for="title">Title</label>
             <input class="form-control" type="text" id="title" name="campground[title]" required>
@@ -16,10 +16,10 @@
             <input class="form-control" type="text" id="location" name="campground[location]" required>
         </div>
         <!-- <input type="file" name="image" id=""> -->
-        <div class="mb-3">
+        <!-- <div class="mb-3">
             <label class="form-label" for="image">Image Url</label>
-            <input class="form-control" type="text" id="image" name="campground[image]" required>
-        </div>
+            <input class="form-control" type="text" id="image" name="campground[image]">
+        </div> -->
         <div class="mb-3">
             <label class="form-label" for="price">CampgroundPrice</label>
             <div class="input-group">
@@ -30,6 +30,15 @@
         <div class="mb-3">
             <label class="form-label" for="description">Description</label>
             <textarea class="form-control" type="text" id="description" name="campground[description]" required></textarea>
+        </div>
+        <!-- <div class="mb-3">
+            <div class="form-file custom-file">
+                <input type="file" class="form-file-input" id="image" name="image" multiple>
+                <label class="form-file-label" for="image">
+                    <span class="form-file-text custom-file-label">Choose image(s)...</span>
+                    <span class="form-file-button">Browse</span>
+                </label>
+            </div> -->
         </div>
         <div class="mb-3">
             <button class="btn btn-success">Add CampGround</button>
